--- a/frontend/styles/cards.css
+++ b/frontend/styles/cards.css
@@ -2,9 +2,9 @@
 
 .gameList {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(260px, 0px));
+  justify-content: center;
   gap: 30px;
-  justify-items: center;
   margin-top: 40px;
 }
 
@@ -86,7 +86,7 @@
 }
 
 .game-card .card-details ul li:last-child i {
-  color: #ec6090;
+  color: #91deff;
 }
 
 .platform-icon {
