--- a/frontend/styles/layout.css
+++ b/frontend/styles/layout.css
@@ -32,6 +32,13 @@
     padding-left: 60px;
   }
 
+  .page-footer {
+    display: flex;
+    justify-content: center;
+    padding: 40px 0;
+    margin-top: 40px;
+  }  
+
   .search-bar {
     flex-grow: 1;
     display: flex;
